# vect

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.in  NEWS  README.md  SConstruct  about.txt  backup.sh  config.cache  config.status  configure  configure.in  configure.scan  default.pal  flake.nix  guix.scm  help.txt  history.txt  keys.txt  vect
experimental/: ex30.c
experimental/linux/: add_aleg.cc  add_aleg.hh  circle.cc  color.cc  color.hh  ex30.c  line.cc  objects.cc  objects.hh  polygon.cc  status.cc  status.hh  vector.cc
graphics/: 91.pcx  99.pcx  F40.pcx  GEWITTER3.RGF  Makefile.am  an.pcx  another.rgf  another2.rgf  auto.pcx  auto.rgf  begf.rgf  bercol.pcx  bercol.rgf  berg.pcx  berg.rgf  berg2.rgf  bum.rgf  dots.rgf  drei.rgf  ep3.rgf  exp.rgf  expe.rgf  expl.rgf  f40.rgf  f402.rgf  f40_2.pcx  flight.rgf  gewi.rgf  gewitter.rgf  gw.rgf  gwitter2.rgf  hand.pcx  haus.rgf  k.rgf  pal.rgf  pal2.rgf  pas.rgf  plane.rgf  raum-.rgf  rect.rgf  (+8 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.man  add_aleg.cc  add_aleg.hh  automake.sh  circle.cc  circle.hh  color.cc  color.hh  defs.hh  dot.cc  dot.hh  gfx_lib.h  group.cc  group.hh  line.cc  line.hh  menu.cc  menu.hh  menudefs.cc  menudefs.hh  multidot.cc  multidot.hh  polygon.cc  polygon.hh  rect.cc  rect.hh  screen.cc  screen.hh  shape.cc  shape.hh  shapes.hh  status.cc  status.hh  text.cc  text.hh  unsorted.cc  unsorted.hh  (+4 more)
src/.deps/: add_aleg.P  circle.P  color.P  dot.P  group.P  line.P  menu.P  multidot.P  polygon.P  rect.P  screen.P  shape.P  status.P  text.P  unsorted.P  vect.P  zoom.P
