dnl Process this file with autoconf to produce a configure script.
AC_INIT( src/vect.cc )
AM_INIT_AUTOMAKE( vect, 0.4.0 )

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lalleg:
AC_CHECK_LIB(alleg, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(src/Makefile Makefile)
